--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
         ul {
             list-style: none;
         }
-
         li {
             margin: 1em;
         }
-
         audio {
             display: block;
+        }
+        .Progress{
+            color: crimson;
+            font-size: larger;
         }
     </style>
 </head>
@@ -64,11 +66,21 @@
 <input type="file" id="fileInput"/>
 <br>
 
-<h2>Recordings</h2>
-<ul id="recordingslist"></ul>
+<h2>Progress</h2>
+<div class="Progress">
+    <span>Current conversion progress:</span>
+    <span id="progress">0</span>
+    <span>(%)</span>
+</div>
 
-<h2>Log</h2>
-<pre id="log"></pre>
+<h2>Recordings</h2>
+<ul id="recordingslist">
+    <li id="recorderFile">
+        <a id="linkA" href=""></a>
+        <audio id="audio" src="" controls></audio>
+    </li>
+</ul>
+
 <script type="text/javascript" src="main.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
