--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </li>
 </ul>
 
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="EncoderOgg.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
