add safari test file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="icon" href="data:image/ico;base64,aWNv">
     <title>音频文件转换为ogg格式</title>
-    <script src="recorder.js"></script>
     <style type='text/css'>
         body{
             background: antiquewhite;
@@ -58,6 +57,13 @@
     </ul>
     <br>
 
+    <div>
+        <h2>safari test</h2>
+        <!--<audio id="safariTest" controls autoplay src=""></audio>-->
+        <ol id="List"></ol>
+    </div>
+
+
     <h2>Progress</h2>
     <div class="Progress">
         <ul>
@@ -77,7 +83,11 @@
         </li>
     </ul>
 </div>
-<script type="text/javascript" src="EncoderOgg.js"></script>
-<script type="text/javascript" src="index.js"></script>
+<!--<script src="recorder.js"></script>-->
+<!--<script type="text/javascript" src="EncoderOgg.js"></script>-->
+<!--<script type="text/javascript" src="index.js"></script>-->
+
+<!--for safari test-->
+<script src="safariTest.js" type="text/javascript"></script>
 </body>
 </html>
