--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         </li>
     </ul>
 </div>
-<!--<script src="recorder.js"></script>-->
-<!--<script type="text/javascript" src="EncoderOgg.js"></script>-->
-<!--<script type="text/javascript" src="index.js"></script>-->
+<script src="recorder.js"></script>
+<script type="text/javascript" src="EncoderOgg.js"></script>
+<script type="text/javascript" src="index.js"></script>
 
 <!--for safari test-->
-<script src="safariTest.js" type="text/javascript"></script>
+<!--<script src="safariTest.js" type="text/javascript"></script>-->
 </body>
 </html>
