change browser judge

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     <ul id="recordingslist">
         <li id="recorderFile">
             <a id="linkA" href=""></a>
-            <audio id="audio" src="" controls></audio>
+            <audio id="localAudio" controls autoplay>
+                您的浏览器不支持 audio 标签
+            </audio>
         </li>
     </ul>
 </div>
