--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="content">
     <h1>音频格式转换</h1>
     <h2>Options</h2>
-
+    <hr>
     <ul>
         <li>
             <label>monitorGain</label>
@@ -49,7 +49,16 @@
         </li>
     </ul>
 
-
+    <div>
+        <hr>
+        <h1  style="color: brown;">safari test</h1>
+        <ul>
+            <li><input type="file" id="safariFileInput"/></li>
+        </ul>
+        <!--<audio id="safariTest" controls autoplay src=""></audio>-->
+        <ol id="List"></ol>
+        <hr>
+    </div>
 
     <h2>file upload</h2>
     <ul>
@@ -57,13 +66,7 @@
     </ul>
     <br>
 
-    <div>
-        <h2>safari test</h2>
-        <!--<audio id="safariTest" controls autoplay src=""></audio>-->
-        <ol id="List"></ol>
-    </div>
-
-
+    <hr>
     <h2>Progress</h2>
     <div class="Progress">
         <ul>
@@ -75,6 +78,8 @@
         </ul>
     </div>
 
+    <hr>
+    <h2></h2>
     <h2>Recordings</h2>
     <ul id="recordingslist">
         <li id="recorderFile">
@@ -90,6 +95,6 @@
 <script type="text/javascript" src="index.js"></script>
 
 <!--for safari test-->
-<!--<script src="safariTest.js" type="text/javascript"></script>-->
+<script src="safariTest.js" type="text/javascript"></script>
 </body>
 </html>
